--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <tr>
       <td>
-        <img src="/home/ritik/Documents/web dev/image/circle-cropped.png" alt="ritik profile pic" width="300" height="300">
+        <img src="/home/ritik/Documents/web dev/circle-cropped.png" alt="ritik profile pic" width="300" height="300">
       </td>
       <td>
         <h1>Ritik Singh</h1>
