--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Ritik Singh</h1>
         <p><em>Mechanical Engineering,</em> <a href="http://www.iitkgp.ac.in/">IIT Kharagpur</a></p>
 
-        <p>A Sophomore enrolled in Integrated 5 year course.</p>
+        <p>A Sophomore enrolled in Integrated 5yr course.</p>
       </td>
     </tr>
   </table>
