--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 
   <hr>
 
-  <form class="" action="index.html" method="post">
+  <form class="" action="" method="post">
     <label for="name">Your Name:</label>
     <input type="text" name="" value="">
     <br>
