--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 
   <hr>
 
-  <form class="" action="" method="post">
+  <form action="mailto:ritikkashyap420@gmail.com" class="" action="" method="post" enctype="text/plain">
     <label for="name">Your Name:</label>
     <input type="text" name="" value="">
     <br>
