--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 
     <label for="message">Your message:</label>
     <br>
-    <textarea name="name" rows="10" cols="30"></textarea>
+    <textarea name="" rows="10" cols="30"></textarea>
     <br>
     <input type="submit" name="">
   </form>
